TABLE fix title column word wrap

--- a/public/css/mapple-public.css
+++ b/public/css/mapple-public.css
@@ -105,7 +105,7 @@
 }
 
 .mapple__sort--title {
-	white-space: nowrap;
+	min-width: 170px;
 }
 
 /* Search and Filter table */
